--- a/ex2style.css
+++ b/ex2style.css
@@ -1,3 +1,4 @@
+
 p{
     font-family: Arial;
     color: red;
@@ -7,3 +8,9 @@ h2,h3{
     color: red;
     font-style:oblique;
 }
+.throw{
+    
+    border: none;
+    border-radius: 30px;
+}
+
